--- a/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
+++ b/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
@@ -5,6 +5,9 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Fecha:</mat-label>
       <input matInput formControlName="fecha" />
+      <!--<input matInput formControlName="fecha" [matDatepicker]="picker" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>-->
       <mat-error *ngIf="dateControl.errors?.required"> {{ 'La fecha es' }} <strong>requerido</strong>  </mat-error>
    </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
