Cambios según revisión

--- a/src/app/security-module/trace-access/pages/trace-access-page/trace-access-page.component.html
+++ b/src/app/security-module/trace-access/pages/trace-access-page/trace-access-page.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h4>Trazas de Acceso</h4>
+  <h4>Historial de Acceso</h4>
   <app-custom-table
     *ngIf="traceAccess"
     [data]="traceAccess"
