--- a/src/app/stock-modules/productstock/pages/productstock-page/productstock-page.component.html
+++ b/src/app/stock-modules/productstock/pages/productstock-page/productstock-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Almacen Producto</h4>
-    <button (click)="createProductstock()" mat-raised-button color="primary" class="button">Crear Almacen Producto</button>
+    <h4>Almacén Producto</h4>
+    <button (click)="createProductstock()" mat-raised-button color="primary" class="button">Crear Almacén Producto</button>
   </div>
   <app-custom-table
     *ngIf="productstock"
