--- a/src/app/stock-modules/existence/components/existence-form/existence-form.component.html
+++ b/src/app/stock-modules/existence/components/existence-form/existence-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-    <h4>{{ data.existence ? 'Editar Existencia' : 'Crear Existencia' }}</h4>
+    <h4>{{ data.existence === null ? 'Crear Existencia' : 'Editar Existencia' }}</h4>
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="existenceForm" [formGroup]="existenceForm">
         <mat-form-field class="w-100" appearance="outline">
@@ -17,11 +17,11 @@
         </mat-form-field>
         <!-- almacen -->
         <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Almacen" [items]="almacenes"
+            <ng-select appearance="outline" class="custom w-100" placeholder="Almacén" [items]="almacenes"
                 bindLabel="nombre" bindValue="id" formControlName="almacen">
             </ng-select>
             <small class="text-danger error-style" *ngIf="almacenControl.errors?.required">El
-                campo almacen es <strong>requerido</strong></small>
+                campo almacén es <strong>requerido</strong></small>
         </div>
         <!-- unidad_medida -->
         <div class="mb-4">
@@ -33,11 +33,11 @@
         </div>
         <!-- categoria -->
         <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Categoria" [items]="productCategory"
+            <ng-select appearance="outline" class="custom w-100" placeholder="Categoría" [items]="productCategory"
                 bindLabel="descripcion" bindValue="id" formControlName="categoria">
             </ng-select>
             <small class="text-danger error-style" *ngIf="categoriaControl.errors?.required">La
-                categoria es <strong>requerido</strong></small>
+                categoría es <strong>requerido</strong></small>
         </div>
 
         <!-- Lote -->
@@ -56,7 +56,7 @@
         <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
         <button (click)="onSubmit(existenceForm.value)" [disabled]="!existenceForm.valid" mat-raised-button
             color="primary" class="button">
-            {{ data.existence ? 'Aceptar' : 'Crear' }}
+            {{ data.existence === null ? 'Crear' : 'Aceptar' }}
         </button>
     </div>
 
