arreglo error en examen fisico

--- a/src/app/clinical-services/physicalexam/components/physicalexam-form/physicalexam-form.component.html
+++ b/src/app/clinical-services/physicalexam/components/physicalexam-form/physicalexam-form.component.html
@@ -73,8 +73,8 @@
         appearance="outline"
         class="custom w-100"
         placeholder="Sesión Clínica"
-        [items]="motivo"
-        bindLabel="nro_inventario"
+        [items]="sesion_clinica"
+        bindLabel="motivo"
         bindValue="id"
         formControlName="sesion_clinica">
       </ng-select>
