--- a/src/app/stock-modules/facture-service/components/fature-service-form/fature-service-form.component.html
+++ b/src/app/stock-modules/facture-service/components/fature-service-form/fature-service-form.component.html
@@ -2,11 +2,70 @@
   <h4>{{ data.factureService ? 'Editar Distribución de Lote' : 'Crear Distribución de Lote' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="factureServiceForm" [formGroup]="factureServiceForm">
+    <div class="row">
+      <div class="col-lg-4 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Cantidad</mat-label>
       <input type="number" matInput formControlName="cantidad" />
       <mat-error *ngIf="cantidadControl.errors?.required"> {{ 'La cantidad es ' }} <strong>requerida</strong> </mat-error>
     </mat-form-field>
+    </div>
+      <div class="col-lg-4 col-md-12">
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Número Factura:</mat-label>
+      <input matInput formControlName="nro_factura" />
+      <mat-error *ngIf="this.nrofacturaControl.errors?.required"> {{ 'El número de Factura es' }} <strong>requerido</strong>  </mat-error>
+   </mat-form-field>
+   </div>
+   <div class="col-lg-4 col-md-12">
+   <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Importe Total:</mat-label>
+    <input matInput formControlName="importe_total" />
+    <mat-error *ngIf="this.importeTotalControl.errors?.required"> {{ 'El importe total es' }} <strong>requerido</strong>  </mat-error>
+  </mat-form-field>
+</div>
+<div class="col-lg-4 col-md-12">
+  <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Descuento:</mat-label>
+    <input matInput formControlName="descuento" />
+  </mat-form-field>
+</div>
+<div class="col-lg-4 col-md-12">
+  <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Arancel:</mat-label>
+    <input matInput formControlName="arancel" />
+  </mat-form-field>
+</div>
+<div class="col-lg-4 col-md-12">
+  <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Comentarios:</mat-label>
+    <input matInput formControlName="comentarios" />
+    <mat-error *ngIf="this.comentariosControl.errors?.required"> {{ 'Los comentarios son' }} <strong>requerido</strong>  </mat-error>
+  </mat-form-field>
+</div>
+    <div class="col-lg-6 col-md-12">
+      <mat-form-field class="w-100" appearance="outline">
+        <mat-label>Fecha de Emisióm</mat-label>
+        <input matInput formControlName="fecha_emision" [matDatepicker]="picker" />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="emisionControl.errors?.required">
+          {{ 'La fecha de emisión es ' }} <strong>requerida</strong>
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="col-lg-6 col-md-12">
+      <mat-form-field class="w-100" appearance="outline">
+        <mat-label>Fecha de Entrega</mat-label>
+        <input matInput formControlName="fecha_entrega" [matDatepicker]="picker1" />
+        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+        <mat-error *ngIf="entregaControl.errors?.required">
+          {{ 'La fecha de entrega es ' }} <strong>requerida</strong>
+        </mat-error>
+      </mat-form-field>
+    </div>
+  <div class="col-lg-6 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Servicio</mat-label>
       <mat-select #mySelect formControlName="servicio">
@@ -14,19 +73,43 @@
       </mat-select>
       <mat-error *ngIf="servicioControl.errors?.required"> {{ 'Seleccione un servicio' }} </mat-error>
     </mat-form-field>
-
-    <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Factura</mat-label>
-      <mat-select #mySelect formControlName="factura">
-        <mat-option *ngFor="let facture of factures" [value]="facture.id">{{ facture.nro_factura }}</mat-option>
+    </div>
+  <div class="col-lg-6 col-md-12">
+  <!-- Operación COmercial -->
+  <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Operación Comercial</mat-label>
+    <mat-select #mySelect formControlName="operacion_comercial">
+      <mat-option *ngFor="let operacion of operacion_comercial" [value]="operacion.id">{{ operacion.descripcion }}</mat-option>
+    </mat-select>
+    <mat-error *ngIf="operacionControl.errors?.required"> {{ 'Seleccione una operación comercial' }} </mat-error>
+  </mat-form-field>
+</div>
+<div class="col-lg-6 col-md-12">
+   <!-- Estado -->
+   <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Estado</mat-label>
+    <mat-select #mySelect formControlName="estado">
+      <mat-option *ngFor="let est of estado" [value]="est.id">{{ est.descripcion }}</mat-option>
+    </mat-select>
+    <mat-error *ngIf="estadoControl.errors?.required"> {{ 'Seleccione un estado' }} </mat-error>
+  </mat-form-field>
+</div>
+<div class="col-lg-6 col-md-12">
+     <!-- Comercial -->
+     <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Comercial</mat-label>
+      <mat-select #mySelect formControlName="comercial">
+        <mat-option *ngFor="let com of comercial" [value]="com.id">{{ com.first_name }}</mat-option>
       </mat-select>
-      <mat-error *ngIf="facturaControl.errors?.required"> {{ 'La factura es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="comercialControl.errors?.required"> {{ 'Seleccione un comercial' }} </mat-error>
     </mat-form-field>
+  </div>
+  </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(factureServiceForm.value)" [disabled]="!factureServiceForm.valid" mat-raised-button color="primary" class="button">
+    <button (click)="sendData()" [disabled]="!factureServiceForm.valid" mat-raised-button color="primary" class="button">
       {{ data.factureService ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
