arreglos de almdetallemovimiento y existencia

--- a/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
+++ b/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
@@ -3,7 +3,7 @@
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="WarehouseMovementDetailForm" [formGroup]="WarehouseMovementDetailForm">
             <label>Importe:</label>
-       <div class="row">
+       <div class="row mb-2">
          <div class="form-group col-md-6">
            <mat-form-field class="w-100" appearance="outline">
              <mat-label>Cantidad:</mat-label>
@@ -21,7 +21,7 @@
            </mat-form-field>
          </div>
        </div>
-      <div class="row">
+      <div class="row mb-2">
         <div class="form-group col-md-6">
          <mat-form-field class="w-100" appearance="outline">
            <mat-label>Existencia</mat-label>
