--- a/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
+++ b/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
@@ -2,7 +2,11 @@
     <h4>{{ data.warehouseMovementDetail ? 'Editar Detalle Movimiento' : 'Crear Detalle Movimiento' }}</h4>
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="WarehouseMovementDetailForm" [formGroup]="WarehouseMovementDetailForm">
-            <label class="border border-success mb-1">Importe: {{ amount}}</label>
+      <div class="row mb-1">
+        <div class="form-group col-md-6">
+            <label class="border border-success">Importe: {{ amount}}</label>
+        </div>
+      </div>
        <div class="row mb-2">
          <div class="form-group col-md-6">
            <mat-form-field class="w-100" appearance="outline">
