cambio en importe super bien en detalle movimiento

--- a/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
+++ b/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
@@ -25,11 +25,14 @@
       <mat-label>Precio Viejo:</mat-label>
       <input matInput formControlName="precio_viejo" maxlength="20"/>
       <mat-error *ngIf="oldpriceControl.errors?.required"> {{ 'El precio viejo es' }} <strong>requerido</strong>  </mat-error>
+      <mat-error *ngIf="oldpriceControl.errors?.isDecimalFijo172"> {{ 'El precio viejo es numérico' }} <strong> la parte entera de 15 números y la decimal de 4 números</strong>  </mat-error>
+
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Precio Nuevo:</mat-label>
       <input matInput formControlName="precio_nuevo" maxlength="20"/>
       <mat-error *ngIf="newpriceControl.errors?.required"> {{ 'El precio nuevo es' }} <strong>requerido</strong>  </mat-error>
+      <mat-error *ngIf="newpriceControl.errors?.isDecimalFijo172"> {{ 'El precio nuevo es numérico' }} <strong> la parte entera de 15 números y la decimal de 4 números</strong>  </mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Comentario</mat-label>
