Quitando acciones crear, editar y eliminar

--- a/src/app/stock-modules/classifiers/move-status/components/move-status-form.component/move-status-form.component.html
+++ b/src/app/stock-modules/classifiers/move-status/components/move-status-form.component/move-status-form.component.html
@@ -10,10 +10,10 @@
     </mat-form-field>
   </form>
   <mat-divider class="my-4"></mat-divider>
-  <div class="d-flex align-items-center justify-content-end">
+ <!--  <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(moveStatusForm.value)" [disabled]="!moveStatusForm.valid" mat-raised-button color="primary" class="button">
       {{ data.moveStatus ? 'Aceptar' : 'Crear' }}
     </button>
-  </div>
+  </div> -->
 </div>
