--- a/src/app/stock-modules/classifiers/move-status/pages/move-status-page/move-status-page.component.html
+++ b/src/app/stock-modules/classifiers/move-status/pages/move-status-page/move-status-page.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Estado de Movimiento</h4>
-    <button (click)="createMoveStatus()" mat-raised-button color="primary" class="button">Crear Estado de Movimiento</button>
-  </div>
+ <!--    <button (click)="createMoveStatus()" mat-raised-button color="primary" class="button">Crear Estado de Movimiento</button>
+   --></div>
   <app-custom-table
     *ngIf="movesStatus"
     [data]="movesStatus"
@@ -11,7 +11,6 @@
     [columnsName]="configuration.columnsName"
     [paginationSize]="configuration.paginationSize"
     [filters]="configuration.tableFilters"
-    [rowActionButtons]="rowActionButtons"
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
