--- a/src/app/stock-modules/classifiers/move-type/components/move-type-form/move-type-form.component.html
+++ b/src/app/stock-modules/classifiers/move-type/components/move-type-form/move-type-form.component.html
@@ -28,10 +28,10 @@
     </mat-form-field>
   </form>
   <mat-divider class="my-4"></mat-divider>
-  <div class="d-flex align-items-center justify-content-end">
+ <!--  <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
     <button (click)="onSubmit(moveTypeForm.value)" [disabled]="!moveTypeForm.valid" mat-raised-button color="primary" class="button">
       {{ data.moveType ? 'Aceptar' : 'Crear' }}
     </button>
-  </div>
+  </div> -->
 </div>
