--- a/src/app/stock-modules/classifiers/move-type/page/move-type-page/move-type-page.component.html
+++ b/src/app/stock-modules/classifiers/move-type/page/move-type-page/move-type-page.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Tipo de Movimiento</h4>
-    <button (click)="createMoveType()" mat-raised-button color="primary" class="button">Crear tipo de Movimiento</button>
-  </div>
+ <!--    <button (click)="createMoveType()" mat-raised-button color="primary" class="button">Crear tipo de Movimiento</button>
+  --> </div>
   <app-custom-table
     *ngIf="moveTypes"
     [data]="moveTypes"
@@ -11,7 +11,6 @@
     [columnsName]="configuration.columnsName"
     [paginationSize]="configuration.paginationSize"
     [filters]="configuration.tableFilters"
-    [rowActionButtons]="rowActionButtons"
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
