--- a/src/app/stock-modules/classifiers/product-category/pages/product-category-page/product-category-page.component.html
+++ b/src/app/stock-modules/classifiers/product-category/pages/product-category-page/product-category-page.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Categoría Producto</h4>
-    <button (click)="createProductCategory()" mat-raised-button color="primary" class="button">Crear Categoría Producto</button>
-  </div>
+ <!--    <button (click)="createProductCategory()" mat-raised-button color="primary" class="button">Crear Categoría Producto</button>
+  --> </div>
   <app-custom-table
     *ngIf="productCategories"
     [data]="productCategories"
@@ -11,7 +11,6 @@
     [columnsName]="configuration.columnsName"
     [paginationSize]="configuration.paginationSize"
     [filters]="configuration.tableFilters"
-    [rowActionButtons]="rowActionButtons"
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
