Cambiando valor de sesion clínica

--- a/src/app/clinical-services/diagnostic/components/diagnostic-form/diagnostic-form.component.html
+++ b/src/app/clinical-services/diagnostic/components/diagnostic-form/diagnostic-form.component.html
@@ -14,7 +14,7 @@
         class="custom w-100"
         placeholder="Sesión Clínica"
         [items]="clininc_session"
-        bindLabel="hc"
+        bindLabel="motivo"
         bindValue="id"
         formControlName="sesion_clinica"
       >
